@@ -19,6 +19,30 @@
   <url type="bugtracker">https://github.com/mike-fabian/ibus-typing-booster/issues</url>
   <url type="help">https://mike-fabian.github.io/ibus-typing-booster/documentation.html</url>
   <releases>
+    <release version="2.3.0" date="2018-12-05" urgency="medium">
+      <description>
+        <ul>
+          <li>
+            Update translations from zanata (de, ja updated)
+          </li>
+          <li>
+            Commit the current preëdit when the focus changes
+          </li>
+          <li>
+            When preëdit empty or lookup table not enabled by key:
+            clear the lookup table
+          </li>
+          <li>
+            Make key bindings configurable (Resolves:
+            https://github.com/mike-fabian/ibus-typing-booster/issues/15)
+          </li>
+          <li>
+            Correct tooltips for the “up” and “down” buttons for input
+            methods dictionaries
+          </li>
+        </ul>
+      </description>
+    </release>
     <release version="2.2.1" date="2018-11-28" urgency="medium">
       <description>
         <ul>
