@@ -1,4 +1,12 @@
 * Author: Mike FABIAN <mfabian@redhat.com>
+* 05 Dec 2018 Released 2.3.0 version
+* Update translations from zanata (de, ja, uk updated)
+* Commit the current preëdit when the focus changes
+* When preëdit empty or lookup table not enabled by key: clear the lookup table
+* Make key bindings configurable (Resolves: https://github.com/mike-fabian/ibus-typing-booster/issues/15)
+* Correct tooltips for the “up” and “down” buttons for input methods dictionaries
+
+* Author: Mike FABIAN <mfabian@redhat.com>
 * 28 Nov 2018 Released 2.2.1 version
 * Update translations from zanata (pl, uk updated)
 
